Fix, test TimeOffsetRegular (part 1). Cleanup Grid API, add tests (part 1). Move MinMax to nc2.util.